Ajustes Texto Clock

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                             <span id="hours">00: </span>
                         </div>
                         <div class="time">
-                            <h3>Horas</h3>
+                            <h3>Minutos</h3>
                             <span id="minutes">00:</span>
                         </div>
                         <div class="time">
-                            <h3>Horas</h3>
+                            <h3>Segundos</h3>
                             <span id="seconds">00</span>
                         </div>
                         
@@ -43,7 +43,7 @@
                     
                 </div>
                 <span>Inscreva-se para saber mais sobre o lançamento</span>
-                <a href="">Inscreva-se</a>
+                <a href="#">Inscreva-se</a>
             </div>
             <div class="image">
                 <img src="img/rocket.svg" alt="">
