Create Form in Modal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -73,7 +73,7 @@
                             <h2>Informe seus dados.</h2>
                             <input type="text" placeholder="Nome do astronauta..">
                             <input type="email" placeholder="E-mail do astronauta..">
-                            <input type="submit" value="Cadastre-se">
+                            <a  class="btn_save">Cadastre-se</a>
                             
                         </form>
                         <a class="btn_cancelar">Cancelar</a>
