--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="img/bottom-image.svg" alt="">
     </footer>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
         <div class="modal">
                 <a  class="close-modal">
                         <i class="material-icons">close</i>
